sync daily version 2.0.1

--- a/2.0.1/demo/index.html
+++ b/2.0.1/demo/index.html
@@ -51,9 +51,9 @@
 <body>
 <h1>demo汇总</h1>
 <ul>
-    <li rel="http://gtms04.alicdn.com/tps/i4/T1ESuNFipgXXbbjygo-287-150.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo1.html">demo1点击进入 - 简单的控制音乐播放</a></li>
-    <li rel="http://gtms01.alicdn.com/tps/i1/T1IBW5Fk4aXXa7zVn3-378-206.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo2.html">demo2点击进入 - MP3列表模式实例</a></li>
-    <li rel="http://gtms04.alicdn.com/tps/i4/T11Mq2FcJfXXaDVS78-449-385.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo3.html">demo3点击进入  - 完整MP3播放器-演示所有功能</a></li>
+    <li rel="http://gtms04.alicdn.com/tps/i4/T1ESuNFipgXXbbjygo-287-150.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo1.html?ks-debug">demo1点击进入 - 简单的控制音乐播放</a></li>
+    <li rel="http://gtms01.alicdn.com/tps/i1/T1IBW5Fk4aXXa7zVn3-378-206.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo2.html?ks-debug">demo2点击进入 - MP3列表模式实例</a></li>
+    <li rel="http://gtms04.alicdn.com/tps/i4/T11Mq2FcJfXXaDVS78-449-385.jpg"><a href="http://gallery.kissyui.com/musicplayer/2.0.1/doc/demo/demo3.html?ks-debug">demo3点击进入  - 完整MP3播放器-演示所有功能</a></li>
 </ul>
 <script type="text/javascript">
     var S = KISSY;
